--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.5.2
+certifi==2022.6.15.2
 Django==4.1.1
 django-phonenumber-field==7.0.0
 phonenumberslite==8.12.54
 Pillow==9.2.0
+requests==2.28.1
+requests-oauthlib==1.3.1
 sqlparse==0.4.2
 tzdata==2022.2
-
-
